# rpascal

./: .gitignore  CMakeLists.txt  README.md  TP7_COMPLIANCE_ANALYSIS.md  feature_test.pas  run_tests.bat  run_tests.sh  test_sets.pas
examples/: advanced_records.cpp  advanced_records.pas  basic_features.pas  calculator.pas  comprehensive_test.cpp  comprehensive_test.pas  fizzbuzz.pas  foo.pas  hello.pas  pointer_arithmetic_test.pas
include/: ast.h  cpp_generator.h  lexer.h  parser.h  pascal_runtime.h  symbol_table.h  token.h  type_checker.h  unit_loader.h
src/: main.cpp  unit_loader.cpp
src/codegen/: cpp_generator.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  parser.cpp
src/runtime/: pascal_runtime.cpp
src/semantic/: symbol_table.cpp  type_checker.cpp
tests/: enhanced_strings_test.pas  test_arrays.pas  test_basic_types.pas  test_builtin_functions.pas  test_builtin_simple.pas  test_comprehensive.pas  test_control_flow.pas  test_control_flow_fixed.pas  test_enumerations.pas  test_file_operations_simple.pas  test_labels_goto.pas  test_pointers.pas  test_procedures_functions.pas  test_records.pas  test_runner.cpp  test_runner.pas  test_sets.pas  test_strings.pas  test_succ_pred.pas  turbo_pascal_7_compatibility.pas
units/: SimpleTest.pas  crt.pas  dos.pas
